[package]
name = "mls-sim"
version = "0.4.3"
edition = "2021"

[dependencies]
eframe = "0.29"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mlua = { version = "0.10", features = ["lua53", "vendored", "send", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
